kube/prod/react.yaml
# React Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: react
  name: react
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: react
    spec:
      containers:
      - image: acrackintheice/expense-tracker-react:0.0.1
        imagePullPolicy: Always
        name: react
        command: ["serve"]
        args: [-s", "build", "-l", "8080"]
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      restartPolicy: Always
status: {}
---
# React Service
apiVersion: v1
kind: Service
metadata:
  labels:
    service: react
  name: react
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: react
