kube/prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: react.acrackintheice.com
    http:
      paths:
      - backend:
          serviceName: react
          servicePort: 80
  - host: api.acrackintheice.com
    http:
      paths:
      - backend:
          serviceName: spring
          servicePort: 8080
